Fixed alignment of hobbies and skills on about me desktop page

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -291,6 +291,7 @@ nav a:hover {
 
     .about_me .lists ul {
         flex-direction: row; /* Lists side by side */
+        justify-content: center;
     }
 
     .about_me .lists .list_one,
